src/test/deca/syntax/invalid/ifthenelse_decl.deca
//Test d'une declaration dans une condition if


//Resultat: Erreur syntaxique

{
    int x = 1;
    if (x<0){
        int a = 0;
        println(a);
    }
}